Fix bug on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -23,7 +23,7 @@ body {
     height: 100%;
     max-width: 1000px;
     margin: 0 auto;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 @media screen and (min-width: 715px) {
